--- a/git.html
+++ b/git.html
@@ -284,7 +284,7 @@ sudo apt-get auroremove</pre></td></tr>
   <p>Il faut ensuite se placer dans le répertoire /usr/local</p>
   <pre>cd /usr/local</pre>
   <p>Puis il faut décompresser le fichier .gz :</p>
-  <pre>tar xvzf nom_fichier.tar.gz</pre>
+  <pre>sudo tar xvzf nom_fichier.tar.gz</pre>
 
   <p>Finalement, il faut suivre les instructions d'installation dans le ficier README.txt ou le INSTALL</p>
 
